[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"] }
common-utils = { path = "../common-utils" }
crossbeam-channel = "0.5.13"
rand = "0.9.0-beta.0"
env_logger = "0.9"
log = "0.4"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
