[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"] }
common-utils = { path = "../common-utils" }
crossbeam-channel = "0.5.13"
rand = "0.9.0-beta.0"
env_logger = "0.9"
log = "0.4"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

lazy_static = "1.5.0"
petgraph = "0.6.5"
tiny_http = "0.12.0"
tungstenite = "0.24.0"
tokio-tungstenite = "0.23.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
url = "2.5.4"
colored = "2"
crossbeam = "0.8.4"
sled = "*"
uuid = { version = "1.12.1", features = ["v4"] }  # For generating unique client IDs

futures = "0.3"
futures-util = "*"
